--- a/css/main.css
+++ b/css/main.css
@@ -59,7 +59,9 @@ i, h3 {
 
 .middle > div {
   width: 20%;
-  display: inline-block; }
+  display: inline-block;
+  height: 31px;
+  vertical-align: top; }
 
 .right {
   text-align: right;
@@ -73,16 +75,17 @@ i, h3 {
   display: block;
   text-align: center;
   margin: -2px;
-  border-right: solid 2px black; }
+  border-right: solid 2px black;
+  color: black; }
 
 /*Code for the Div 1,2,5 -Icon*/
 i:hover {
   background-color: black;
-  color: white; }
+  color: white !important; }
 
 /*Code for the Div 1,2,5 -Icon*/
 i:hover {
-  background-color: darkgrey;
+  background-color: black;
   color: white; }
 
 /*Animation Code for the Shirtsize*/
@@ -93,11 +96,11 @@ i:hover {
   .dropdown .dropdown-content {
     display: none;
     font-family: 'Raleway', sans-serif;
-    color: darkgrey;
+    color: white;
     position: absolute;
     background-color: white;
     min-width: 100%;
-    border: 2px solid darkgrey;
+    border: 2px solid black;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
     text-align: center;
@@ -106,7 +109,7 @@ i:hover {
     padding: 1px; }
   .dropdown .dropbtn {
     font-family: 'Raleway', sans-serif;
-    color: darkgrey;
+    color: black;
     font-size: 20px;
     cursor: pointer; }
 
@@ -120,7 +123,7 @@ i:hover {
 
 .dropdown-content a {
   font-family: 'Raleway', sans-serif;
-  color: darkgrey;
+  color: black;
   width: 100%;
   text-decoration: none;
   display: block; }
@@ -129,11 +132,12 @@ i:hover {
 .color {
   width: 20px;
   height: 20px;
-  background-color: darkgrey;
-  margin-left: 25px !important; }
+  background-color: black;
+  margin-left: 24px !important;
+  margin-top: 5px !important; }
 
 .shirt1 {
-  border-right: 2px solid red !important;
+  border-right: 2px solid black !important;
   margin: 0px auto; }
 
 .color-content > div {
@@ -196,10 +200,11 @@ i:hover {
 .top img {
   max-height: 250px; }
 
-.subtotal {
+.subtotal > div {
   position: inline-block;
   margin: 0px auto;
-  text-align: right; }
+  text-align: left;
+  padding: 0; }
 
 .total {
   position: inline-block;
@@ -271,15 +276,6 @@ header .rightHeader ul {
       position: absolute;
       bottom: 30px;
       left: 40px; }
-    .threeCol .one .green, .threeCol .two .green, .threeCol .three .green {
-      width: 100%;
-      height: 427px;
-      background-color: darkgrey;
-      position: absolute;
-      top: 0;
-      left: 0;
-      opacity: 0;
-      transition: opacity 1s; }
   .threeCol .two h3 {
     color: black; }
   .threeCol .one {
@@ -293,7 +289,7 @@ header .rightHeader ul {
   height: inherit; }
 
 .fa {
-  font-size: 20px;
+  font-size: 22px;
   color: red; }
 
 .jerk {
