--- a/sass/main.scss
+++ b/sass/main.scss
@@ -67,6 +67,8 @@ i, h3 {
 .middle > div{
 	width: 20%;
 	display: inline-block;
+	height: 31px;
+	vertical-align: top;
 }
 .right{
 	text-align: right;
@@ -82,13 +84,14 @@ i, h3 {
 	text-align: center;
 	margin:-2px;
 	border-right: solid 2px black;
+	color: black;
 }
 
 /*Code for the Div 1,2,5 -Icon*/
 
 i:hover{
 	background-color: black;
-	color: white;
+	color: white !important;
 }
 
 	
@@ -97,7 +100,7 @@ i:hover{
 /*Code for the Div 1,2,5 -Icon*/
 
 i:hover{
-	background-color: darkgrey;
+	background-color: black;
 	color: white;
 }
 
@@ -110,11 +113,11 @@ i:hover{
     .dropdown-content {
 	    display: none;
 	    font-family: 'Raleway', sans-serif;
-	    color: darkgrey;
+	    color: white;
 	    position: absolute;
 	    background-color: white;
 	    min-width: 100%;
-	    border: 2px solid darkgrey ;
+	    border: 2px solid black ;
 	    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 	    z-index: 1;
 	    text-align: center;
@@ -124,7 +127,7 @@ i:hover{
 		}
     .dropbtn {
 		font-family: 'Raleway', sans-serif;
-	    color: darkgrey;
+	    color: black;
 	    font-size: 20px;
 	    cursor: pointer; 	
 		}
@@ -144,7 +147,7 @@ i:hover{
 
 .dropdown-content a {
     font-family: 'Raleway', sans-serif;
-    color: darkgrey;
+    color: black;
     width: 100%;
     text-decoration: none;
     display: block;
@@ -156,12 +159,13 @@ i:hover{
 .color {
 	width:20px;
 	height:20px;
-	background-color:darkgrey;
-	margin-left: 25px !important;
+	background-color:black;
+	margin-left: 24px !important;
+	margin-top: 5px !important;
 }
 
 .shirt1{
-	border-right: 2px solid red !important;
+	border-right: 2px solid black !important;
 	margin: 0px auto;
 }
 
@@ -239,10 +243,12 @@ i:hover{
 .top img {
 	max-height:250px;
 }
-.subtotal{
+.subtotal > div{
 	position:inline-block;
 	margin: 0px auto;
-	text-align: right;
+	text-align: left;
+	padding: 0;
+	
 }
 .total{
 	position: inline-block;
@@ -356,16 +362,6 @@ header {
 			left:40px;
 		}
 
-		.green {
-			width:100%;
-			height:427px;
-			background-color:darkgrey;
-			position:absolute;
-			top:0;
-			left:0;
-			opacity:0;
-			transition: opacity 1s;
-		}
 	}
 
 	.two {
@@ -393,7 +389,7 @@ header {
 }
 
 .fa {
-	font-size:20px;
+	font-size:22px;
 	color: red;
 }
 
@@ -448,6 +444,13 @@ header {
 
 
 }
+
+
+
+
+
+
+
 
 
 
